# day-forge

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  PHASES.md  README.md  RULES.md  day_forge_prd.md  docker-compose.yml  main.py  pyproject.toml
.claude/commands/: await-review-iterate.md  review-all.md
.claude/rules/: project.md  workflows.md
.github/workflows/: claude-code-review.yml  deploy.yml
backend/: manage.py
backend/ai/: _review_probe.py  admin.py  apps.py  checks.py  models.py  prompts.py  schemas.py  service.py  views.py
backend/analytics/: admin.py  models.py  services.py  views.py
backend/calendar_sync/: admin.py  apps.py  cache.py  checks.py  crypto.py  models.py  schemas.py  service.py  travel_rules.py  views.py
backend/day_forge/: __init__.py  asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
backend/gcal_sync/: admin.py  apps.py  cache.py  checks.py  crypto.py  models.py  service.py  views.py
backend/habitica_sync/: admin.py  apps.py  cache.py  checks.py  crypto.py  models.py  schemas.py  service.py  views.py
backend/schedules/: admin.py  api.py  apps.py  checks.py  http.py  models.py  validators.py  views.py
backend/templates/: base.html
backend/templates_mgr/: admin.py  api.py  apps.py  models.py  preferences.py  views.py
backend/tests/: conftest.py  test_admin.py  test_ai_prompts_draft.py  (+38 more)
deployment/: README.md
docs/: api.md
frontend/: package-lock.json  package.json  vite.config.ts
scripts/: test10_audit_envelope.py  test9_rate_limit.py
tasks/: lessons.md  todo.md
(+266 files in other folders)
