[project]
name = "day-forge"
version = "0.1.0"
description = "AI-powered daily schedule assistant"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.0,<6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "day_forge.settings"
pythonpath = ["backend"]
