[project]
name = "day-forge"
version = "0.1.0"
description = "AI-powered daily schedule assistant"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "caldav>=3.2.0",
    "cryptography>=48.0.0",
    "django>=5.0,<6.0",
    "google-auth>=2.30.0",
    "google-auth-oauthlib>=1.2.0",
    "httpx>=0.27.0",
    "icalendar>=7.1.1",
    "inertia-django>=1.0",
    "openai>=2.8.1",
    "python-dotenv>=1.2.2",
    "recurring-ical-events>=3.8.2",
    "redis>=5.0",
    "uvicorn[standard]>=0.34.0",
    "whitenoise>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "day_forge.settings"
pythonpath = ["backend"]
